<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presenter.details.DetailsFragment">

    <include
        android:id="@+id/shimmer_layout_loading"
        layout="@layout/shimmer_layout_loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/layout_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_circle"
                android:padding="4dp"
                android:src="@drawable/ic_close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/color_default"
                tools:ignore="ContentDescription" />

            <com.like.LikeButton
                android:id="@+id/like_button"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="16dp"
                app:anim_scale_factor="2"
                app:circle_start_color="@color/white"
                app:icon_size="25dp"
                app:icon_type="heart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:like_drawable="@drawable/ic_heart_fill"
                app:unlike_drawable="@drawable/ic_heart_line" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_item"
                android:orientation="vertical"
                android:padding="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_close">

                <TextView
                    android:id="@+id/text_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/color_default"
                    android:textSize="16sp"
                    tools:text="hello" />

                <TextView
                    android:id="@+id/text_phonetic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAlignment="center"
                    android:textColor="@color/color_default"
                    tools:text="phonetic" />

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_play_circle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:ignore="ContentDescription" />

            <SeekBar
                android:id="@+id/seek_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:progressTint="@color/white"
                android:thumbTint="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/iv_play"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_play"
                app:layout_constraintTop_toTopOf="@+id/iv_play" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/text_meanings_details_fragment"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_play" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_definition"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/white"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/btn_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:itemCount="2"
                tools:listitem="@layout/item_meaning"
                tools:text="used as a greeting or to begin a phone conversation." />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/white"
                android:text="@string/text_button_back_details_fragment"
                android:textAllCaps="false"
                android:textColor="@color/color_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_next"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/white"
                android:text="@string/text_button_next_details_fragment"
                android:textAllCaps="false"
                android:textColor="@color/color_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_back" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>